--- a/bhub/src/BlueBinaries Page/BlueBinaries.css
+++ b/bhub/src/BlueBinaries Page/BlueBinaries.css
@@ -1,3 +1,25 @@
 .main-div {
-    
+    background-color: rgb(112, 177, 252);
+    width: 60%;
+    border-radius: 50px;
+    background-image: url("C:/Users/Interns/Desktop/Intern Files/React/bhub/src/BlueBinaries Page/IT4.jpg");
+    height: 850px;
+}
+
+.heading {
+    color: rgb(255, 255, 255);
+    padding: 30px;
+    font-size: 60px;
+    /* top: 10px; */
+}
+
+span {
+    color: rgb(255, 255, 255);
+    padding: 30px;
+    font-size: 40px;
+}
+.picture {
+    width: 100%;
+    height: 60%;
+    border-radius: 50px;
 }
