--- a/bhub/src/BlueBinaries Page/BlueBinaries.css
+++ b/bhub/src/BlueBinaries Page/BlueBinaries.css
@@ -23,3 +23,25 @@ span {
     height: 60%;
     border-radius: 50px;
 }
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 0);
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.bottom-div {
+    position: absolute;
+    top: 800px;
+    left: 545px;
+}
+
+.dots-container {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    margin-bottom: 10px;
+}
